# Refixion-website

./: .gitignore  design_guidelines.json  package.json  pyproject.toml  vercel.json
.emergent/: emergent.yml
.emergent/cron/: webhook-crons
api/: [...].py  index.py
backend/: .env.example  MIGRATION_NOTES.md  auth.py  content_seed.py  database.py  db_utils.py  models.py  requirements.txt  schemas.py  seed.py  seed_data.py  serializers.py  server.py  shop_models.py  shop_routes.py  utils.py  wsgi.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/scripts/: create_tables.py
backend/sql/: 001_initial_schema.sql
backend/tests/: backend_test.py  test_iteration3.py  test_iteration4.py
frontend/: .env.production  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/site/: Footer.jsx  Logo.jsx  Navbar.jsx  SiteLayout.jsx  primitives.jsx
frontend/src/i18n/: index.js  nl.js
frontend/src/lib/: api.js  auth.jsx  booking-store.js  icons.js  useSeo.js  useSiteContent.js
frontend/src/pages/: AboutPage.jsx  BookingPage.jsx  BookingSuccessPage.jsx  BusinessPage.jsx  ContactPage.jsx  FAQPage.jsx  HomePage.jsx  LegalPage.jsx  NotFoundPage.jsx  PricingPage.jsx  RepairsPage.jsx  ReviewsPage.jsx  ShopDetailPage.jsx  ShopPage.jsx  WarrantyPage.jsx
frontend/src/pages/admin/: AdminBookingsPage.jsx  AdminContentPage.jsx  AdminDashboardPage.jsx  AdminDevicesPage.jsx  AdminEmailSettingsPage.jsx  AdminLayout.jsx  AdminLoginPage.jsx  AdminRepairMethodsPage.jsx  AdminSeoPage.jsx  AdminShopPage.jsx  AdminWarrantiesPage.jsx  AdminWorkshopPage.jsx
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
test_reports/pytest/: iter3_results.xml  pytest_results.xml
