[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refixion-backend"
version = "1.0.0"
description = "Refixion repair booking API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Refixion Team", email = "refixionstore@gmail.com"}
]

dependencies = [
    "fastapi==0.110.1",
    "uvicorn[standard]==0.25.0",

    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.2",

    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",

    "pydantic==2.13.4",
    "email-validator==2.3.0",

    "python-jose==3.5.0",
    "PyJWT==2.10.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.3",

    "stripe==14.4.1",
    "aiosmtplib==3.0.2",
    "httpx==0.28.1",
    "requests==2.34.2"
]

[tool.setuptools]
packages = ["backend"]


[tool.black]
line-length = 120
target-version = ['py311']

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
